--- a/index.html
+++ b/index.html
@@ -290,22 +290,22 @@
 
                     <!-- box -->
                     <section class="color-shape reference">
-                        <a href="wireframe/index.html" target="_blank">
+                        <a href="site/main.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
-                                    <span class="overlay-img-donut">wireframe</span>
-                                    <span class="overlay-text-thumb-donut">와이어프레임</span>
-                                    <span class="overlay-text-thumb1-donut">와이어프레임</span>
-                                    <span class="overlay-text-thumb2-donut">wireframe</span>
+                                    <span class="overlay-img-donut">SITE</span>
+                                    <span class="overlay-text-thumb-donut">사이트 제작</span>
+                                    <span class="overlay-text-thumb1-donut">사이트 제작</span>
+                                    <span class="overlay-text-thumb2-donut">SITE</span>
                                 </div>
                                 <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
                                 <div class="img-text donutImg">
-                                    <h5>wireframe</h5>
-                                    <p>와이어프레임</p>
-                                    <span>wireframe</span>
+                                    <h5>SITE</h5>
+                                    <p>사이트 제작</p>
+                                    <span>SITE</span>
                                 </div>
                             </div>
-                        </a>
+                        </a> 
                     </section>
                     <!-- //box -->
 
