--- a/javascript/javascriptSample07.html
+++ b/javascript/javascriptSample07.html
@@ -6,24 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>시계 만들기</title>
     <style>
-        * {
+        @font-face {
+            font-family: 'NEXON Lv1 Gothic OTF';
+            src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv1 Gothic OTF.woff') format('woff');
+            font-weight: normal;
+            font-style: normal;
+        }
+        html,
+        body {
+            height: 100%;
             margin: 0;
             padding: 0;
+            background-image: linear-gradient(#E7E7E7, #D7D7D7);
+            font-family: 'NEXON Lv1 Gothic OTF';
         }
-        body {
-            height: 100vh;
-            background-image: linear-gradient(180deg, #e7e7e7, #d7d7d7);
-        }
-        .clock-wrap {
+        .clock-wrapper {
+            position: absolute;
+            top: 50%;
+            right: 0;
+            bottom: 50%;
+            left: 0;
             width: 250px;
             height: 250px;
-            background-image: linear-gradient(180deg, #f7f7f7, #e0e0e0);
+            margin: auto;
+            padding: 5px;
+            background-image: linear-gradient(#F7F7F7, #E0E0E0);
             border-radius: 50%;
-            box-shadow: 0 10px 15px rgba(0, 0, 0, 0.15);
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
+            box-shadow: 0 10px 15px rgba(0, 0, 0, .15), 0 2px 2px rgba(0, 0, 0, .2);
         }
         .clock-base {
             width: 250px;
@@ -40,7 +49,7 @@
             width: 230px;
             height: 230px;
         }
-        .clock-indicator {
+        .clock-dial .clock-indicator {
             position: absolute;
             width: 2px;
             height: 4px;
@@ -87,10 +96,100 @@
             transform: rotate(360deg) translateY(-113px);
             background-color: #c00;
         }
+        .clock-hour {
+            position: absolute;
+            z-index: 2;
+            top: 80px;
+            left: 128px;
+            width: 4px;
+            height: 65px;
+            background-color: #555;
+            border-radius: 2px;
+            box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+            transform-origin: 2px 50px;
+            /* transition: .5s;
+            animation: rotate-hour 43200s linear infinite; */
+        }
+        .clock-minute {
+            position: absolute;
+            z-index: 3;
+            top: 60px;
+            left: 128px;
+            width: 4px;
+            height: 85px;
+            background-color: #555;
+            border-radius: 2px;
+            box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+            transform-origin: 2px 70px;
+            /* transition: .5s;
+            animation: rotate-minute 3600s linear infinite; */
+        }
+        .clock-second {
+            position: absolute;
+            z-index: 4;
+            top: 20px;
+            left: 129px;
+            width: 2px;
+            height: 130px;
+            background-color: #a00;
+            box-shadow: 0 0 2px rgba(0, 0, 0, .2);
+            transform-origin: 1px 110px;
+            /* transition: .5s;
+            animation: rotate-second 60s linear infinite; */
+        }
+        .clock-second:after {
+            content: "";
+            display: block;
+            position: absolute;
+            left: -5px;
+            bottom: 14px;
+            width: 8px;
+            height: 8px;
+            background-color: #a00;
+            border: solid 2px #a00;
+            border-radius: 50%;
+            box-shadow: 0 0 3px rgba(0, 0, 0, .2);
+        }
+        .clock-center {
+            position: absolute;
+            z-index: 1;
+            width: 150px;
+            height: 150px;
+            top: 55px;
+            left: 55px;
+            background-image: linear-gradient(#E3E3E3, #F7F7F7);
+            border-radius: 50%;
+            box-shadow: inset 0 -1px 0 #FAFAFA, inset 0 1px 0 #E3E3E3;
+        }
+        .clock-center:after {
+            content: "";
+            display: block;
+            width: 20px;
+            height: 20px;
+            margin: 65px;
+            background-color: #ddd;
+            border-radius: 50%;
+        }
+        .time {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 20px;
+        }
+        .dday {
+            position: absolute;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 20px;
+            line-height: 1.4;
+            white-space: nowrap;
+        }
     </style>
 </head>
 <body>
-    <div class="clock-wrap">
+    <div class="clock-wrapper">
         <div class="clock-base">
             <div class="clock-dial">
                 <div class="clock-indicator"></div>
@@ -106,7 +205,69 @@
                 <div class="clock-indicator"></div>
                 <div class="clock-indicator"></div>
             </div>
+            <div class="clock-hour"></div>
+            <div class="clock-minute"></div>
+            <div class="clock-second"></div>
+            <div class="clock-center"></div>
         </div>
     </div>
+
+    <div class="time">00:00:00</div>
+    <div class="dday">앞으로 수료일은 <span class="dday-time">00</span>일 남았습니다^_^</div>
+
+    <script>
+        setInterval(function(){
+            const daylist = ['일요일', '월요일', '화요일', '수요일', '목요일', '금요일', '토요일'];
+            const today = new Date();
+            
+            const nowH = today.getHours();   //시간 가져오기
+            const nowM = today.getMinutes();  //분 가져오기
+            const nowS = today.getSeconds();   //초 가져오기
+            const nowD = daylist[today.getDay()];  //요일 가져오기
+            //변수 nowD를 선언한 후 데이터는 배열값으로 되어있는 daylist를 가져와야 하므로
+            //daylist[ ]의 형태에서 대괄호 안에 오늘요일을 넣어 해당되는 값을 가져오게 해야한다.
+            //그래서 daylist[ ]안에는 오늘요일을 가져와 주는 메서드인 today.getDay()를 넣어
+            //날짜에 맞는 요일을 숫자가 아닌 문자로 출력되게 해준다.
+
+            const degH = nowH * (360 / 12) + nowM * (360 / 12 / 60);
+            const degM = nowM * (360 / 60);
+            const degS = nowS * (360 / 60);
+
+            const eleH = document.querySelector(".clock-hour");
+            const eleM = document.querySelector(".clock-minute");
+            const eleS = document.querySelector(".clock-second");
+
+            eleH.style.transform = `rotate(${degH}deg)`;
+            eleM.style.transform = `rotate(${degM}deg)`;
+            eleS.style.transform = `rotate(${degS}deg)`;
+
+            //시간표시
+            const nowTime = `${today.toLocaleDateString()} ${nowD} ${today.toLocaleTimeString()}`;
+            //문자열 메서드 - 문자열결합/템플릿 문자열 참고 : .innerHTML = '`${ 1 } ${ 2 } ${ 3 } `
+            //toLocaleString() : 2021. 8. 12. 오후 시:분:초
+            //toLocaleDateString() : 2021. 8. 12
+            //toLocaleTimeString() : 오후 시:분:초
+            //풀이 : `${오늘.날짜} ${오늘요일} ${오늘.시간}` --> 출력 --> 2021. 8. 12 목요일 오후 시:분:초
+            //const nowTime = today.toLocaleString();
+
+            const time = document.querySelector(".time");
+            time.innerHTML = nowTime;
+
+            //1초 1,000(msc)
+            //1분(60s) = 1,000*60 = 60,000(ms)
+            //1시간(60m) = 1,000*60*60 = 3,600,000(msc)
+            //1일(60m*24h) = 1,000*60*60*24 = 66,400,000(msc)
+
+            //디데이
+            const dDay = new Date("December 20, 2021");
+
+            let interval = today.getTime() - dDay.getTime();
+            interval = Math.floor(interval / (1000 * 60 *60 *24));
+            
+            document.querySelector(".dday-time").innerHTML = interval;
+
+            // 숙제 - 날짜 뒤에 요일 표시
+        }, 1000);
+    </script>
 </body>
 </html>
