--- a/site/main.html
+++ b/site/main.html
@@ -11,6 +11,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/fonts.css">                                    <!-- 폰트설정 css -->
+    <link rel="stylesheet" href="css/var.css">                                    <!-- 변수설정 css -->
     <link rel="stylesheet" href="css/reset.css">                                    <!-- 기본설정 초기화 css -->
     <link rel="stylesheet" href="css/common.css">                                   <!-- 공통설정 css -->
     <link rel="stylesheet" href="css/style.css">                                    <!-- 스타일설정 css -->
@@ -18,12 +19,14 @@
     <!-- 파비콘 -->
     <!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->            <!-- 화면 탭의 아이콘(?) -->
 </head>
-<body>
+<body class="dark">
     <!-- header -->
     <header id="header">
         <div class="container">
-            <div class="header">
-                <h1><a href="main.html">KDONG</a></h1>
+            <div class="header-three">
+                <h1>
+                    <a href="main.html">KDONG</a>
+                </h1>
                 <nav class="menu">
                     <ul>
                         <li><a href="#">메뉴 아이템</a></li>
@@ -33,9 +36,12 @@
                         <li><a href="#">메뉴 아이템</a></li>
                     </ul>
                 </nav>
+                <div class="member">
+                    <a href="#" class="btn-style radius">회원가입</a>
+                    <a href="#" class="btn-style radius">로그인</a>
+                </div>
             </div>
         </div>
-        
     </header>
     <!-- //header -->
 
