--- a/javascript/javascript606.html
+++ b/javascript/javascript606.html
@@ -228,6 +228,46 @@
                 padding: 0.1em 1.5em;
                 font-size: 0.8em;
             }
+            .view {
+                padding: 20px;
+            }
+            .view table {
+                width: 100%;
+                border: 1px solid #E6E6E6; /* 속기형 작성법 */
+                text-align: center;
+                vertical-align: middle;
+                border-collapse: collapse;
+            }
+            .view table th {
+                /* padding-top: 13px;
+                padding-right: 5px;
+                padding-bottom: 11px;
+                padding-left: 5px; */ 
+                /* padding: 13px 5px 11px 5px; */ /* 위/오른쪽/아래/왼쪽 */
+                /* padding: 13px 5px 11px; */ /* 위/왼쪽.오른쪽/아래 */ 
+                /* padding: 13px 5px; */ /* 위.아래/ 왼쪽.오른쪽 */
+                /* padding: 13px; */ /* 위.오른쪽.아래.왼쪽 */
+                padding: 13px 5px 11px 5px;
+            }
+            .view table td {
+                border: 1px solid #E6E6E6;
+                padding: 13px 5px 11px 5px;
+            }
+            .view table td.result {
+                color: #fff;
+                transition: all 0.3s;
+                cursor: zoom-in;
+            }
+            .view table td.result:hover{
+                color: #000;
+                background-color: #f5f5f5;
+            }
+            @media (max-width: 600px){
+                .view table td.result {
+                    color: #000;
+                    background-color: #f5f5f5;
+                }
+            }
             @media(max-width: 800px){
                 .menu li a {
                     font-size: 12px;
