--- a/javascript/javascript602-1.html
+++ b/javascript/javascript602-1.html
@@ -38,8 +38,7 @@
             }
     
             h1 {
-                padding-top: 40px;
-                padding-bottom: 20px;
+                padding: 20px 0;
             }
     
             h1 a {
@@ -263,13 +262,13 @@
                 padding: 0.1em 1.5em;
                 font-size: 0.8em;
             }
+            @media (max-width: 600px){
+                .view table td.result {
+                    color: #000;
+                    background-color: #f5f5f5;
+                }
+            }
             @media(max-width: 800px){
-                body {
-                    font-size: 13px;
-                }
-                h1 {
-                    text-align: center;
-                }
                 .menu li a {
                     font-size: 12px;
                     padding: 5px 20px;
@@ -281,26 +280,14 @@
                     font-size: 12px;
                 }
                 .sample h2 {
+                    padding: 12px 10px;
                     font-size: 14px;
-                    font-weight: normal;
-                    padding: 7px 5px 5px;
                 }
                 .sample h2 .dot {
                     display: none;
                 }
                 .sample pre {
                     font-size: 14px;
-                }
-                .view {
-                    padding: 5px;
-                    max-width: 800px;
-                    overflow: auto;
-                }
-                .view th {
-                    font-weight: normal;
-                }
-                .view table td.result {
-                    color: #000;
                 }
             }
         </style>
