--- a/javascript/javascript606.html
+++ b/javascript/javascript606.html
@@ -38,7 +38,8 @@
             }
     
             h1 {
-                padding: 20px 0;
+                padding-bottom: 20px;
+                padding-top: 40px;
             }
     
             h1 a {
@@ -262,13 +263,13 @@
                 color: #000;
                 background-color: #f5f5f5;
             }
-            @media (max-width: 600px){
-                .view table td.result {
-                    color: #000;
-                    background-color: #f5f5f5;
-                }
-            }
             @media(max-width: 800px){
+                body {
+                    font-size: 13px;
+                }
+                h1 {
+                    text-align: center;
+                }
                 .menu li a {
                     font-size: 12px;
                     padding: 5px 20px;
@@ -280,14 +281,26 @@
                     font-size: 12px;
                 }
                 .sample h2 {
-                    padding: 12px 10px;
                     font-size: 14px;
+                    font-weight: normal;
+                    padding: 7px 5px 5px;
                 }
                 .sample h2 .dot {
                     display: none;
                 }
                 .sample pre {
                     font-size: 14px;
+                }
+                .view {
+                    padding: 5px;
+                    max-width: 800px;
+                    overflow: auto;
+                }
+                .view th {
+                    font-weight: normal;
+                }
+                .view table td.result {
+                    color: #000;
                 }
             }
         </style>
