--- a/javascript/javascript601.html
+++ b/javascript/javascript601.html
@@ -38,7 +38,8 @@
             }
     
             h1 {
-                padding: 20px 0;
+                padding-top: 40px;
+                padding-bottom: 20px;
             }
     
             h1 a {
