--- a/refer-jquery/jqueryRefer03.html
+++ b/refer-jquery/jqueryRefer03.html
@@ -84,6 +84,64 @@
             /* display: block; */
             vertical-align: top;
         }
+        .table th {
+            text-align: center;
+        }
+
+        /* ex4 */
+        .ex4 {
+            min-height: 300px;
+            position: relative;
+        }
+        .ex4 .circle {
+            display: block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 10px;
+            margin: 10px;
+            border: 5px solid #fff94d;
+        }
+
+        /* ex5 */
+        .ex5 {
+            text-align: center;
+        }
+        .ex5 .circle {
+            display: inline-block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+            padding: 10px;
+            margin: 10px;
+            border: 5px solid #fff94d;
+        }
+
+        /* ex6 */
+        .ex6 {
+            min-height: 300px;
+            position: relative;
+        }
+        .ex6 .circle {
+            display: block;
+            height: 100px;
+            width: 100px;
+            border-radius: 50%;
+            background-image: linear-gradient(-225deg, #231557 0%, #44107A 29%, #FF1361 67%, #FFF800 100%);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            padding: 10px;
+            margin: 10px;
+            border: 5px solid #fff94d;
+        }
     </style>
 </head>
 <body>
@@ -123,10 +181,10 @@
             <div class="table">
                 <table>
                     <colgroup>
+                        <col style="width: 15%">
                         <col style="width: 20%">
                         <col style="width: 20%">
-                        <col style="width: 20%">
-                        <col style="width: 40%">
+                        <col style="width: 45%">
                     </colgroup>
                     <thead>
                         <tr>
@@ -166,80 +224,80 @@
                         <tr>
                             <td class="center" rowspan="4">CSS</td>
                             <td>.addClass()</td>
-                            <td></td>
+                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.add()</a></td>
                             <td>클래스(active) 추가합니다.</td>
                         </tr>
                         <tr>
                             <td>.removeClass()</td>
-                            <td></td>
+                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.remove()</a></td>
                             <td>클래스(active) 삭제합니다.</td>
                         </tr>
                         <tr>
                             <td>.toggleClass()</td>
-                            <td></td>
+                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.toggle()</a></td>
                             <td>클래스(active)를 추가/삭제합니다.</td>
                         </tr>
                         <tr>
                             <td>.hasClass()</td>
-                            <td></td>
+                            <td><a href="../refer-javascript/javascriptRefer10.html" target="_blank">.classList.contains()</a></td>
                             <td>클래스를 찾은 후에 클래스를 제거합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="6">Dimensions</td>
                             <td>.width()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.innerWidth()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 안쪽(padding포함, border/margin 불포함) 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.outerWidth()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 바깥쪽(padding/border/margin 포함) 가로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.height()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.innerHeight()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 안쪽(padding포함, border/margin 불포함) 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.outerHeight()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 바깥쪽(padding/border/margin 포함) 세로 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="5">offset</td>
                             <td>.offset()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 좌표 값(문서를 기준)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.offsetParent()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 좌표 값(부모 위치를 기준)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.position()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 좌표 값(기준점 기준)을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.scollLeft()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 가로 스크롤 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td>.scollTop()</td>
                             <td></td>
-                            <td></td>
+                            <td>요소의 세로 스크롤 값을 가져오거나 설정합니다.</td>
                         </tr>
                         <tr>
                             <td class="center" rowspan="2">Data</td>
@@ -312,10 +370,10 @@
                 <div class="code">
 <pre class="line-numbers"><code class="language-js">{
     // 모든 이미지가 선택이 되는것.
-    // $(".ex2 div").click(function(){
-    //     $(".ex2 div").toggleClass("active");
-    // });
-    
+    $(".ex2 div").click(function(){
+        $(".ex2 div").toggleClass("active");
+    });
+
     // 내가 클릭한 이미지만 선택이 되는것.(this사용)
     $(".ex2 div").click(function(){
         $(this).toggleClass("active");
@@ -380,6 +438,220 @@
                 });
             </script>
             <!-- //sample03 -->
+            <hr>
+
+            <!-- sample04 -->
+            <div id="sample04" class="sample">
+                <h2>04. width(), innerWidth(), outerWidth(), height(), innerHeight(), outerHeight()<span class="dot"></span></h2>
+                <div class="view ex4">
+                    <span class="circle circle4"></span>
+
+                    <p class="text text4">여기는 텍스트영역 입니다.</p>
+                </div>
+                <div class="btn">
+                    <a href="#c" class="btn4-1">클릭하면 원의 가로(width)값을 구합니다.</a>
+                    <a href="#c" class="btn4-2">클릭하면 원의 가로(innerWidth)값을 구합니다.</a>
+                    <a href="#c" class="btn4-3">클릭하면 원의 가로(outerWidth)값을 구합니다.</a>
+                    <a href="#c" class="btn4-4">클릭하면 원의 세로(height)값을 구합니다.</a>
+                    <a href="#c" class="btn4-5">클릭하면 원의 세로(innerHeight)값을 구합니다.</a>
+                    <a href="#c" class="btn4-6">클릭하면 원의 세로(outerHeight)값을 구합니다.</a>
+                </div>
+                <div class="btn">
+                    <a href="#c" class="btn4-7">클릭하면 샘플 박스의 가로 값을 구합니다.</a>
+                    <a href="#c" class="btn4-8">클릭하면 문서(HTML)의 가로 값을 구합니다.</a>
+                    <a href="#c" class="btn4-9">클릭하면 브라우저의 가로 값을 구합니다.</a>
+                </div>
+                <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    //width = 마진 + 패딩 + 보더
+
+    // $(".btn4-1").click(function(){
+    //     let circleWidth = $(".circle4").width();
+    //     $(".text4").text(circleWidth)
+    // });
+
+    // $(".btn4-1").click(function(){
+    //     $(".text4").text("이 원의 가로(width)는 " + $(".circle4").width() + "px 입니다.");
+    // });
+
+    function demension(name, size){
+        $(".text4").text("이 원의 " + name + " 값은 " + size + "px 입니다.");
+    }
+
+    $(".btn4-1").click(function(){
+        demension("가로(width)", $(".circle4").width());
+    });
+    $(".btn4-2").click(function(){
+        demension("가로(innerWidth)", $(".circle4").innerWidth());
+    });
+    $(".btn4-3").click(function(){
+        demension("가로(outerWidth)", $(".circle4").outerWidth());
+    });
+    $(".btn4-4").click(function(){
+        demension("세로(height)", $(".circle4").height());
+    });
+    $(".btn4-5").click(function(){
+        demension("세로(innerHeight)", $(".circle4").innerHeight());
+    });
+    $(".btn4-6").click(function(){
+        demension("세로(outerHeight)", $(".circle4").outerHeight());
+    });
+    $(".btn4-7").click(function(){
+        $(".text4").text("이 샘플 박스의 가로 값은 " + $("#sample04").width() + "px 입니다.")
+    });
+    $(".btn4-8").click(function(){
+        $(".text4").text("이 문서의 가로 값은 " + $(document).width() + "px 입니다.")
+    });
+    $(".btn4-9").click(function(){
+        $(".text4").text("이 브라우저의 가로 값은 " + $(window).width() + "px 입니다.")
+    });
+}
+</code></pre>
+                </div>
+            </div>
+            <script>
+                //width = 마진 + 패딩 + 보더
+
+                // $(".btn4-1").click(function(){
+                //     let circleWidth = $(".circle4").width();
+                //     $(".text4").text(circleWidth)
+                // });
+
+                // $(".btn4-1").click(function(){
+                //     $(".text4").text("이 원의 가로(width)는 " + $(".circle4").width() + "px 입니다.");
+                // });
+
+                function demension(name, size){
+                    $(".text4").text("이 원의 " + name + " 값은 " + size + "px 입니다.");
+                }
+
+                $(".btn4-1").click(function(){
+                    demension("가로(width)", $(".circle4").width());
+                });
+                $(".btn4-2").click(function(){
+                    demension("가로(innerWidth)", $(".circle4").innerWidth());
+                });
+                $(".btn4-3").click(function(){
+                    demension("가로(outerWidth)", $(".circle4").outerWidth());
+                });
+                $(".btn4-4").click(function(){
+                    demension("세로(height)", $(".circle4").height());
+                });
+                $(".btn4-5").click(function(){
+                    demension("세로(innerHeight)", $(".circle4").innerHeight());
+                });
+                $(".btn4-6").click(function(){
+                    demension("세로(outerHeight)", $(".circle4").outerHeight());
+                });
+                $(".btn4-7").click(function(){
+                    $(".text4").text("이 샘플 박스의 가로 값은 " + $("#sample04").width() + "px 입니다.")
+                });
+                $(".btn4-8").click(function(){
+                    $(".text4").text("이 문서의 가로 값은 " + $(document).width() + "px 입니다.")
+                });
+                $(".btn4-9").click(function(){
+                    $(".text4").text("이 브라우저의 가로 값은 " + $(window).width() + "px 입니다.")
+                });
+            </script>
+            <!-- //sample04 -->
+            <hr>
+
+            <!-- sample05 -->
+            <div id="sample05" class="sample">
+                <h2>05. width() / height() 변경<span class="dot"></span></h2>
+                <div class="view ex5">
+                    <span class="circle circle5"></span>
+                </div>
+                <div class="view ex5">
+                    <div class="btn">
+                        <a href="#c" class="btn5-0">리셋</a>
+                        <a href="#c" class="btn5-1">클릭하면 원의 가로 값을 300px로 변경합니다.</a>
+                        <a href="#c" class="btn5-2">클릭하면 원의 세로 값을 300px로 변경합니다.</a>
+                        <a href="#c" class="btn5-3">클릭하면 원의 가로, 세로 값을 200px로 변경합니다.</a>
+                    </div>
+                </div>    
+                <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    $(".btn5-0").click(function(){
+        $(".circle5").width("70").height("70");
+    });
+    $(".btn5-1").click(function(){
+        $(".circle5").width("300");
+    });
+    $(".btn5-2").click(function(){
+        $(".circle5").height("300");
+    });
+    $(".btn5-3").click(function(){
+        $(".circle5").width("200").height("200");
+    });
+}
+</code></pre>
+                </div>
+            </div>
+            <script>
+                $(".btn5-0").click(function(){
+                    $(".circle5").width("70").height("70");
+                });
+                $(".btn5-1").click(function(){
+                    $(".circle5").width("300");
+                });
+                $(".btn5-2").click(function(){
+                    $(".circle5").height("300");
+                });
+                $(".btn5-3").click(function(){
+                    $(".circle5").width("200").height("200");
+                });
+            </script>
+            <!-- //sample05 -->
+            <hr>
+
+            <!-- sample06 -->
+            <div id="sample06" class="sample">
+                <h2>06. offset(), position()<span class="dot"></span></h2>
+                <div class="view ex6">
+                    <span class="circle circle6"></span>
+
+                    <p class="text text6">여기는 텍스트영역 입니다.</p>
+                </div>
+                <div class="btn">
+                    <a href="#c" class="btn6-1">클릭하면 원의 x축 위치 값(offset)을 구합니다.</a>
+                    <a href="#c" class="btn6-2">클릭하면 원의 y축 위치 값(offset)을 구합니다.</a>
+                    <a href="#c" class="btn6-3">클릭하면 원의 x축 위치 값(position)을 구합니다.</a>
+                    <a href="#c" class="btn6-4">클릭하면 원의 y축 위치 값(position)을 구합니다.</a>
+                </div>
+                <div class="code">
+<pre class="line-numbers"><code class="language-js">{
+    $(".btn6-1").click(function(){
+        $(".text6").text("이 원의 x축 값은 " + $(".circle6").offset().left + "px 입니다.")
+    })
+    $(".btn6-2").click(function(){
+        $(".text6").text("이 원의 y축 값은 " + $(".circle6").offset().top + "px 입니다.")
+    })
+    $(".btn6-3").click(function(){
+        $(".text6").text("이 원의 x축 값은 " + $(".circle6").position().left + "px 입니다.")
+    })
+    $(".btn6-4").click(function(){
+        $(".text6").text("이 원의 y축 값은 " + $(".circle6").position().top + "px 입니다.")
+    })
+}
+</code></pre>
+                </div>
+            </div>
+            <script>
+                $(".btn6-1").click(function(){
+                    $(".text6").text("이 원의 x축 값은 " + $(".circle6").offset().left + "px 입니다.")
+                })
+                $(".btn6-2").click(function(){
+                    $(".text6").text("이 원의 y축 값은 " + $(".circle6").offset().top + "px 입니다.")
+                })
+                $(".btn6-3").click(function(){
+                    $(".text6").text("이 원의 x축 값은 " + $(".circle6").position().left + "px 입니다.")
+                })
+                $(".btn6-4").click(function(){
+                    $(".text6").text("이 원의 y축 값은 " + $(".circle6").position().top + "px 입니다.")
+                })
+            </script>
+            <!-- //sample06 -->
             <hr>
             
         </main>
