--- a/site/sliderType.html
+++ b/site/sliderType.html
@@ -15,23 +15,49 @@
     <link rel="stylesheet" href="css/common.css">                                   <!-- 공통설정 css -->
 
     <!-- Img Type CSS -->
-    <link rel="stylesheet" href="css/imgType copy.css">                                 <!-- 스타일설정 css -->
+    <link rel="stylesheet" href="css/sliderType.css">                                 <!-- 스타일설정 css -->
 
     <!-- 파비콘 -->
     <!-- <link rel="shortcut icon" href="../assets/ico/favicon.ico"> -->            <!-- 화면 탭의 아이콘(?) -->
 
-    <!-- 나눔스퀘어 웹 폰트 -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
-    <!-- type="text/css" 는 생략 가능 -->
 </head>
 <body>
-    <!-- imgType01 -->
-    <section class="imgType">
-        <div class="container">
-
+    <!-- sliderType01 -->
+    <section class="sliderType">
+        <div class="sliderType01">
+            <div class="slider">
+                <div class="slider-inner">
+                    <em>genesis</em>
+                    <h3>GV70</h3>
+                    <p>당신이 만들어갈 새로운 이야기의 시작</p>
+                    <span class="btn">
+                        <a href="#" class="white">자세히 보기</a>
+                        <a href="#" class="black">견적 내기</a>
+                    </span>
+                </div>
+                <div class="slider-arrow">
+                    <a href="#" class="left">
+                        <img src="img/arrow-left.svg" alt="이전 이미지">
+                    </a>
+                    <a href="#" class="right">
+                        <img src="img/arrow-right.svg" alt="다음 이미지">
+                    </a>
+                </div>
+                <div class="slider-dot">
+                    <a href="#" class="dot active"></a>
+                    <a href="#" class="dot"></a>
+                    <a href="#" class="dot"></a>
+                    <a href="#" class="play">
+                        <img src="img/arrow-play.svg" alt="재생버튼입니다.">
+                    </a>
+                    <a href="#" class="stop">
+                        <img src="img/arrow-stop.svg" alt="멈춤버튼입니다.">
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
-    <!-- //imgType01 -->
+    <!-- //sliderType01 -->
 </body>
 </html> 
 
